<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    app:strokeColor="#fed9b7"
    app:strokeWidth="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <Button
            android:id="@+id/btn_iniciar"
            android:layout_width="377dp"
            android:layout_height="51dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="31dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#F07167"
            android:text="@string/play"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="103dp"
            android:layout_height="28dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/nombre"
            android:textColor="#F07167"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="108dp"
            android:layout_height="29dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="43dp"
            android:text="@string/creada"
            android:textColor="#F07167"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="106dp"
            android:layout_height="29dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="44dp"
            android:text="@string/tiempo"
            android:textAlignment="textStart"
            android:textColor="#F07167"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/txt_nombre"
            android:layout_width="205dp"
            android:layout_height="29dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="#F07167"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_tiempo"
            android:layout_width="198dp"
            android:layout_height="31dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:textColor="#F07167"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_nombre" />

        <TextView
            android:id="@+id/txt_creacion"
            android:layout_width="198dp"
            android:layout_height="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:textColor="#F07167"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_tiempo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>