<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Contador">

    <Button
        android:id="@+id/btn_iniciar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:backgroundTint="#80DEEA"
        android:text="@string/play"
        app:layout_constraintBottom_toBottomOf="@+id/btn_exit"
        app:layout_constraintStart_toEndOf="@+id/btn_exit"
        app:layout_constraintTop_toTopOf="@+id/btn_exit"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txt_apoyo"
        android:layout_width="389dp"
        android:layout_height="96dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:textAlignment="center"
        android:textColor="#81D4FA"
        android:textSize="85sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_contador"
        android:layout_width="328dp"
        android:layout_height="105dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="10dp"
        android:text="00:00"
        android:textAlignment="center"
        android:textColor="#81D4FA"
        android:textSize="90sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_apoyo" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:minHeight="48dp"
        android:text="@string/modozen"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/imgHeart"
        android:layout_width="106dp"
        android:layout_height="92dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_weight="1"
        tools:srcCompat="@drawable/heartimg" />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="106dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#80DEEA"
        android:text="@string/exit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_contador" />

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="150dp"
        android:layout_height="130dp"
        android:layout_marginStart="133dp"
        android:layout_marginTop="40dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_iniciar2"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txt_titulo"
        android:layout_width="313dp"
        android:layout_height="38dp"
        android:layout_marginTop="21dp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagen" />
</androidx.constraintlayout.widget.ConstraintLayout>